Fix production host for Render

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-PGDATABASE=
-PGUSER=
-PGPASSWORD=
-PGHOST=
-PGPORT=
-SECRET_KEY=
+PGDATABASE=neondb
+PGUSER=neondb_owner
+PGPASSWORD=npg_Uo1OkSgtC8EW
+PGHOST=ep-purple-breeze-ac5zd2f3-pooler.sa-east-1.aws.neon.tech
+PGPORT=5432
+SECRET_KEY='+1b@no!(y+^!^wo6cji+d_v)w*r*be0k_ab#9rdx(^!x6eoqyx'
 DEBUG=True
-PRODUCTION_HOST=
+PRODUCTION_HOST=django-drf-cicd-example-selh.onrender.com 
